Lagt till rensafält-knapp

--- a/design/design/Views/Home/LedigaObjektAdmin.cshtml
+++ b/design/design/Views/Home/LedigaObjektAdmin.cshtml
@@ -61,7 +61,7 @@
             </div>
            
                 <div class=" col-md-5 col-lg-5">
-                    <label>Objekt</label>
+                    <label>2 Objekt</label>
                     <div>
                         
                         <select class="list-group" id="objekt" name="objekt" multiple="multiple" style="width:800px; height:200px;">
