--- a/design/design/Views/Home/VarafastigheterAdmin.cshtml
+++ b/design/design/Views/Home/VarafastigheterAdmin.cshtml
@@ -105,12 +105,17 @@
 
                     </form>
                 </div>
-                <div class=" col-md-5 col-lg-6" style="margin-top:25px; padding-left:0px;">
-               
+                <div class=" row">
+                    <div class=" col-md-6 col-lg-6" style="margin-top:25px; padding-left:15px;">
+
                         <button type="submit" class="btn btn-success">Lägg till fastighet <span class="glyphicon glyphicon-floppy-saved"></span></button>
-                  
-                 </div>
-               
+
+                    </div>
+                    <div class=" col-md-6 col-lg-6" style="margin-top:25px; padding-left:0px;">
+
+                        <button type="submit" class="btn btn-default">Rensa fält </button>
+
+                    </div>                </div>
             </div>
         </div>
         <hr style="border-top: 1px solid #e5e5e5;"/>
