Lagt till en sparaknapp

--- a/design/design/Views/Home/studentboendeAdmin.cshtml
+++ b/design/design/Views/Home/studentboendeAdmin.cshtml
@@ -103,7 +103,11 @@
                         </div>
                     </div>
                     <button type="submit" class="btn btn-danger btn-sm">Ta bort bild <span class="glyphicon glyphicon-trash"></span></button>
+                    <div style="margin-top:25px; padding-left:0px;">
 
+                        <button type="submit" class="btn btn-success">Spara <span class="glyphicon glyphicon-floppy-saved"></span></button>
+
+                    </div>
                 </div>
 
                 </div>
