--- a/design/design/Views/Home/studentboendeAdmin.cshtml
+++ b/design/design/Views/Home/studentboendeAdmin.cshtml
@@ -218,7 +218,7 @@
                                     </div>
                                 </div>
                                 <div class="col-md-12 col-lg-12" style="padding-left:0px;">
-                                    <label>Typ av boende:</label><br />
+                                    <label>Typ av fastighet:</label><br />
                                     <form>
                                         <input type="radio" name="val" value="Student" checked> Student
                                         <input type="radio" name="val" value="Senior"> Senior
@@ -368,7 +368,7 @@
                                     </div>
                                 </div>
                                 <div class="col-md-12 col-lg-12" style="padding-left:0px;">
-                                    <label>Typ av boende:</label><br />
+                                    <label>Typ av fastighet:</label><br />
                                     <form>
                                         <input type="radio" name="val" value="Student" checked> Student
                                         <input type="radio" name="val" value="Senior"> Senior
@@ -521,7 +521,7 @@
                                         </div>
                                     </div>
                                     <div class="col-md-12 col-lg-12" style="padding-left:0px;">
-                                        <label>Typ av boende:</label><br />
+                                        <label>Typ av fastighet:</label><br />
                                         <form>
                                             <input type="radio" name="val" value="Student" checked> Student
                                             <input type="radio" name="val" value="Senior"> Senior
