--- a/design/design/Views/Admin/Nyheter.cshtml
+++ b/design/design/Views/Admin/Nyheter.cshtml
@@ -34,6 +34,7 @@
                     <p style="text-align:right;">2017-04-10</p>
                 </div>
                 
+                <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6" style="text-align:left; margin-left:3%;" ><a class=" link" href="#"><< Föregående nyheter</a></div><div class="col-xs-5 col-sm-5 col-md-5 col-lg-5" style="text-align:right;"><a class=" link" href="#">Äldre nyheter >></a></div>
             </div>
             <div class="col-xs-12 col-sm-3 col-md-3 nyhetsarkiv">
                 <div>
@@ -42,5 +43,6 @@
                     <a class="link" href="#" style="text-align:left">Mars 2017</a><br />
                 </div>
             </div>
+
         </div>
 </div>
