--- a/design/design/Views/Home/VarafastigheterAdmin.cshtml
+++ b/design/design/Views/Home/VarafastigheterAdmin.cshtml
@@ -36,7 +36,7 @@
                         </div>
                     </div>
                 <div class="col-md-10 col-xs-12" style="padding-left:0px;">
-                    <label>Typ av boende:</label><br />
+                    <label>Typ av fastighet:</label><br />
                     <form>
                         <input type="radio" name="val" value="Student"> Student
                         <input type="radio" name="val" value="Senior"> Senior
@@ -252,7 +252,7 @@
                                     </div>
                                 </div>
                                 <div class="col-md-12 col-lg-12" style="padding-left:0px;">
-                                    <label>Typ av boende:</label><br />
+                                    <label>Typ av fastighet:</label><br />
                                     <form>
                                         <input type="radio" name="val" value="Student"> Student
                                         <input type="radio" name="val" value="Senior"> Senior
@@ -444,7 +444,7 @@
                                 </div>
 
                                 <div class="col-md-10 col-lg-7" style="padding-left:0px;">
-                                    <label>Typ av boende:</label><br />
+                                    <label>Typ av fastighet:</label><br />
                                     <form>
                                         <input type="radio" name="val" value="Student"> Student
                                         <input type="radio" name="val" value="Senior" checked> Senior
@@ -585,7 +585,7 @@
                                 </div>
 
                                 <div class="col-md-10 col-lg-7" style="padding-left:0px;">
-                                    <label>Typ av boende:</label><br />
+                                    <label>Typ av fastighet:</label><br />
                                     <form>
                                         <input type="radio" name="val" value="Student"> Student
                                         <input type="radio" name="val" value="Senior"> Senior
