--- a/design/design/Views/Home/FragorOchSvarAdmin.cshtml
+++ b/design/design/Views/Home/FragorOchSvarAdmin.cshtml
@@ -131,6 +131,32 @@
                                             Blankett.
                                         </p>
                                     </div>
+                                    <div class="btnredigera btn-group-xs">
+                                        <button class="btn" type="button" id="redigerabtn" onclick="showredigerafråga()">
+                                            Redigera
+                                            <span><i class="glyphicon glyphicon-pencil"></i></span>
+                                        </button>
+                                        <div class="redigera" id="redigerafråga" style="display:none;">
+                                            <div class="col-md-12">
+                                                <div class="falt">
+                                                    <label>
+                                                        Fråga:
+                                                    </label>
+                                                    <div class="input-group">
+                                                        <input name="state" placeholder="John Ekströms Bygg" class="form-control" type="text">
+                                                    </div>
+                                                </div>
+                                                <div class="falt">
+                                                    <label>
+                                                        Svar:
+                                                    </label>
+                                                    <img src="~/Content/Images/publish-wordpress-page.jpg" class="img-responsive" alt="Cinque Terre">
+
+                                                </div>
+                                            </div>
+                                        </div>
+
+                                    </div>
                                 </div>
                             </div>
                             <div class="panel panel-default">
