redigera, och tabort-knapp

--- a/design/design/Views/Home/FragorOchSvarAdmin.cshtml
+++ b/design/design/Views/Home/FragorOchSvarAdmin.cshtml
@@ -131,32 +131,71 @@
                                             Blankett.
                                         </p>
                                     </div>
-                                    <div class="btnredigera btn-group-xs">
-                                        <button class="btn" type="button" id="redigerabtn" onclick="showredigerafråga()">
-                                            Redigera
-                                            <span><i class="glyphicon glyphicon-pencil"></i></span>
-                                        </button>
-                                        <div class="redigera" id="redigerafråga" style="display:none;">
-                                            <div class="col-md-12">
+                                                                         
+                                   
+                                    <div class="row">
+                                        <div class="col-lg-8">
+
+                                        </div>
+
+                                        <div class="col-lg-2">
+                                            <div class="btnredigera btn-group-xs" style="text-align:left;">
+                                                <button class="btn " type="button" id="redigerabtn" onclick="showredigera2()">
+                                                    Redigera
+                                                    <span><i class="glyphicon glyphicon-pencil"></i></span>
+                                                </button>
+                                            </div>
+
+
+                                        </div>
+                                        
+                                        <div class="col-lg-2">
+
+                                            <div class="btnredigera btn-group-xs" style="text-align:right;">
+                                                <button class="btn btn-danger" type="button" id="redigerabtn">
+                                                    Ta bort
+                                                </button>
+                                            </div>
+                                        </div>
+                                    </div>
+
+
+                                    <div class="row">
+
+                                        <div class="redigera" id="redigera2" style="display:none; ">
+                                            <br />
+                                            <div class="col-md-12 col-lg-12">
                                                 <div class="falt">
                                                     <label>
                                                         Fråga:
                                                     </label>
                                                     <div class="input-group">
-                                                        <input name="state" placeholder="John Ekströms Bygg" class="form-control" type="text">
+                                                        <input name="state" placeholder="2a hands uthyrning" class="form-control" type="text">
                                                     </div>
                                                 </div>
+
                                                 <div class="falt">
                                                     <label>
                                                         Svar:
                                                     </label>
                                                     <img src="~/Content/Images/publish-wordpress-page.jpg" class="img-responsive" alt="Cinque Terre">
+                                                    <button type="submit" class="btn btn-success" style="margin-top:75px;">Spara <span class="glyphicon glyphicon-floppy-saved"></span></button>
 
                                                 </div>
+
+
                                             </div>
+                                            
+                                            <div>
+                                                
+                                            </div>
+
                                         </div>
 
+
                                     </div>
+
+
                                 </div>
                             </div>
                             <div class="panel panel-default">
