radiobuttons, kommande eller nuvarande hyresgäster

--- a/design/design/Views/Home/FragorOchSvarAdmin.cshtml
+++ b/design/design/Views/Home/FragorOchSvarAdmin.cshtml
@@ -45,6 +45,14 @@
                             </label>
                             <img src="~/Content/Images/publish-wordpress-page.jpg" />
                         </div>
+
+                        <div class="falt">
+                            <label>Kategori:</label><br />
+                            <form>
+                                <input type="radio" name="val" value="Ja"> För våra hyresgäster
+                                <input type="radio" name="val" value="Nej" checked> För kommande hyresgäster<br />
+                            </form>
+                        </div>
                         <div class="falt">
                             <button type="submit" class="btn btn-success">Spara <span class="glyphicon glyphicon-floppy-saved" style="text-align:right;"></span></button>
 
