--- a/design/design/Views/Home/FragorOchSvarAdmin.cshtml
+++ b/design/design/Views/Home/FragorOchSvarAdmin.cshtml
@@ -76,7 +76,7 @@
 
                         <div class="col-lg-2">
                             <div class="btnredigera btn-group-xs">
-                                <button class="btn" type="button" id="redigerabtn" onclick="showredigera()">
+                                <button class="btn" type="button" id="redigerabtn" onclick="showredigera2()">
                                     Redigera
                                     <span><i class="glyphicon glyphicon-pencil"></i></span>
                                 </button>
@@ -85,8 +85,8 @@
 
                         <div class=" row">
 
-                            <div class="redigera" id="redigera" style="display:none;">
-                                <div class=" row" style="background-color:#dcdcdc;">
+                            <div class="redigera" id="redigera2" style="display:none;">
+                                <div class="row" style="background-color:#dcdcdc;">
                                     <div class=" col-md-6">
                                         <div class="falt">
                                             <label>
