--- a/design/design/Views/Home/studentboendeAdmin.cshtml
+++ b/design/design/Views/Home/studentboendeAdmin.cshtml
@@ -20,7 +20,7 @@
         <div class="col-md-6 col-sm-6 col-xs-12 col-lg-6">
 
             <div class=" col-md-10 col-sm-12 col-xs-12 col-lg-8">
-                <h3>Bilder från studenter</h3>
+                <h3>Våra studentboenden</h3>
                 <div id="myCarousel1" class="carousel slide" data-interval="false">
                     <!-- Indicators -->
                     <ol class="carousel-indicators">
