radiobutton ej lediga objekt

--- a/design/design/Views/Home/LedigaObjektAdmin.cshtml
+++ b/design/design/Views/Home/LedigaObjektAdmin.cshtml
@@ -51,7 +51,9 @@
                 <label>Visa:</label><br />
                 <form>
                     <input type="radio" name="val" value="Ledig" checked> Endast lediga objekt <br />
+                    <input type="radio" name="val" value="EjLedig"> Ej lediga objekt<br />
                     <input type="radio" name="val" value="EjLedig" > Alla objekt<br />
+
 
                 </form>
                 <br />
