Fixat redigeringen i frågor och svar admin

--- a/design/design/Views/Home/FragorOchSvarAdmin.cshtml
+++ b/design/design/Views/Home/FragorOchSvarAdmin.cshtml
@@ -74,46 +74,6 @@
                             <br />
                         </p>
 
-                        <div class="col-lg-2">
-                            <div class="btnredigera btn-group-xs">
-                                <button class="btn" type="button" id="redigerabtn" onclick="showredigera2()">
-                                    Redigera
-                                    <span><i class="glyphicon glyphicon-pencil"></i></span>
-                                </button>
-                            </div>
-                        </div>
-
-                        <div class=" row">
-
-                            <div class="redigera" id="redigera2" style="display:none;">
-                                <div class="row" style="background-color:#dcdcdc;">
-                                    <div class=" col-md-6">
-                                        <div class="falt">
-                                            <label>
-                                                Rubrik:
-                                            </label>
-                                            <div class="input-group">
-                                                <input name="state" placeholder="Rubrik" class="form-control" type="text">
-                                            </div>
-                                        </div>
-
-                                        <div class="falt">
-                                            <label>
-                                                Text:
-                                            </label>
-                                            <img src="~/Content/Images/publish-wordpress-page.jpg" />
-                                        </div>
-                                        <div class="falt">
-                                            <button type="submit" class="btn btn-success">Spara <span class="glyphicon glyphicon-floppy-saved" style="text-align:right;"></span></button>
-
-                                        </div>
-
-
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        
                     </div>
 
                     <div class="col-sm-4 col-md-3 col-lg-3">
@@ -622,14 +582,42 @@
                                         </div>
                                     </div>
                         <div class="col-md-4 col-sm-4 col-lg-4 rightdiv information infosvar">
-                            <h4>Här hittar ni de vanligaste frågorna.</h4>
-                            <p>
-                                <br />Hittar ni inte svar på er fråga är ni
-                                välkomna att kontakta oss via e-post.
+
+                            <div class=" btn-group-xs" style="margin-top:10px;">
+                                <button class="btn" type="button" id="redigerabtn" onclick="show2()">
+                                    Redigera
+                                    <span><i class="glyphicon glyphicon-pencil"></i></span>
+                                </button>
+                            </div>
+
+
+                            <div class="" id="show2" style="background-color:#dcdcdc; display:none;">
+
                                 <br />
-                                <br />Kontaktuppgifter till oss hittar ni <a class="link" href="~/Home/Kontakt">här</a>.
-                                <br />
-                            </p>
+                              
+                                <div class="falt">
+                                    <label>
+                                        Text:
+                                    </label><br />
+                                    <img src="~/Content/Images/publish-wordpress-page.jpg" style="width: 300px;" />
+                                </div>
+                                <div class="falt">
+                                    <button type="submit" class="btn btn-success">Spara <span class="glyphicon glyphicon-floppy-saved" style="text-align:right;"></span></button>
+                                </div>
+
+                            </div>
+                            <div class="infotext" id="infotext" style="display: block;">
+                                <h4>Här hittar ni de vanligaste frågorna.</h4>
+                                <p>
+                                    <br />Hittar ni inte svar på er fråga är ni
+                                    välkomna att kontakta oss via e-post.
+                                    <br />
+                                    <br />Kontaktuppgifter till oss hittar ni <a class="link" href="~/Home/Kontakt">här</a>.
+                                    <br />
+                                </p>
+                            </div>
+                          
+
                         </div>
                         <div class="row rad">
 
