--- a/design/design/Views/Admin/Intresseanmalan.cshtml
+++ b/design/design/Views/Admin/Intresseanmalan.cshtml
@@ -194,7 +194,7 @@
                 <br />
                 @*<div class="btnmedsökande col-md-12 btn-group-lg">*@
                 <div class="btnmedsökande btn-group-lg">
-                    <button class="btn" type="button" id="medsökande" onclick="hideshow()">
+                    <button class="btn btn-default" type="button" id="medsökande" onclick="hideshow()">
                         Medsökande
                         <span class="caret"></span>
                     </button>
@@ -294,7 +294,7 @@
                 <br />
                 <br />
                 <div @*class="col-md-4"*@>
-                    <button type="submit" class="btn btn-warning">Skicka <span class="glyphicon glyphicon-send"></span></button>
+                    <button type="submit" class="btn btn-primary">Skicka <span class="glyphicon glyphicon-send"></span></button>
                 </div>
 
             </div>
