--- a/design/design/Views/Home/FelanmalanAdmin.cshtml
+++ b/design/design/Views/Home/FelanmalanAdmin.cshtml
@@ -122,7 +122,7 @@
                 </div>
              
                     <div class="col-md-4 skicka">
-                        <button type="submit" class="btn btn-warning">Skicka <span class="glyphicon glyphicon-send"></span></button>
+                        <button type="submit" class="btn btn-primary">Skicka <span class="glyphicon glyphicon-send"></span></button>
                     </div>
             </div>
         </div>
