--- a/design/design/Views/Home/Intresseanmalan2.cshtml
+++ b/design/design/Views/Home/Intresseanmalan2.cshtml
@@ -118,7 +118,7 @@
                 <br />
                 @*<div class="btnmedsökande col-md-12 btn-group-lg">*@
                 <div class="btnmedsökande btn-group-lg">
-                    <button class="btn" type="button" id="medsökande" onclick="hideshow()">
+                    <button class="btn btn-default" type="button" id="medsökande" onclick="hideshow()">
                         Medsökande
                         <span class="caret"></span>
                     </button>
@@ -219,7 +219,7 @@
                 <br />
                 <br />
                 <div class="col-xs-5 col-md-4 col-sm-6">
-                    <button type="submit" class="btn btn-warning">Skicka <span class="glyphicon glyphicon-send"></span></button>
+                    <button type="submit" class="btn btn-primary">Skicka <span class="glyphicon glyphicon-send"></span></button>
                 </div>
                 <div class="col-xs-5 col-md-4 col-sm-6">
                     <a href="~/Home/LedigaObjekt" type="submit" class="btn btn-danger">Avbryt</a>
