--- a/design/design/Views/Home/LedigaObjektAdmin.cshtml
+++ b/design/design/Views/Home/LedigaObjektAdmin.cshtml
@@ -179,8 +179,22 @@
                     <label>
                        Övrigt:
                     </label>
-                    <div class="input-group">
-                        <input name="state" placeholder="" class="form-control" type="text">
+                    <div class="col-md-12 checkbox1" style="margin-bottom:7px;">
+                      
+                        <div class="btn-group">
+                            <button data-toggle="dropdown" class="btn btn-default dropdown-toggle" data-placeholder="false">
+                                jag önskar
+                                <span class="caret"></span>
+                            </button>
+                            <ul class="dropdown-menu drop">
+                                <li><input type="checkbox" id="ID" name="Altan" value="Altan"><label for="ID"> Altan</label>
+                                <li><input type="checkbox" id="ID" name="Balkong" value="Balkong"><label for="ID"> Balkong</label>
+                                <li><input type="checkbox" id="ID" name="Hiss" value="Hiss"><label for="ID"> Hiss</label>
+                                <li><input type="checkbox" id="ID" name="Kokvrå" value="Kokvrå"><label for="ID"> Kokvrå</label>
+                                <li><input type="checkbox" id="ID" name="Radhus" value="Radhus"><label for="ID"> Radhus</label>
+
+                            </ul>
+                        </div>
                     </div>
                 </div>
 
