--- a/design/design/Views/Home/KontaktAdmin.cshtml
+++ b/design/design/Views/Home/KontaktAdmin.cshtml
@@ -38,6 +38,14 @@
                                 <img src="~/Content/Images/publish-wordpress-page.jpg" class="img-responsive" alt="Cinque Terre">
 
                             </div>
+                            <div class="col-md-5 col-lg-6" style="margin-top:25px; padding-left:0px;">
+
+                                <button type="submit" class="btn btn-success">Spara<span class="glyphicon glyphicon-floppy-saved"></span></button>
+
+                            </div>
+                            <div class="col-md-5 col-lg-6" style="margin-top:25px; padding-left:0px;">
+                                <button type="submit" class="btn btn-danger">Avbryt <span class="glyphicon glyphicon-floppy-remove"></span></button>
+                            </div>
                         </div>
                     </div>
 
@@ -90,32 +98,12 @@
 
                 <div class="falt">
                     <label>
-                        För- och efternamn:
+                        Text:
                     </label>
-                    <div class="input-group">
-                        <input name="state" placeholder="" class="form-control" type="text">
-                    </div>
+                    <img src="~/Content/Images/publish-wordpress-page.jpg" class="img-responsive" alt="Cinque Terre">
+
                 </div>
 
-                <div class="falt">
-                    <label>Roll:</label>
-                    <div class="input-group">
-                        <input name="state" required placeholder="" class="form-control" type="text">
-                    </div>
-                </div>
-
-                <div class="falt">
-                    <label>Telefon:</label>
-                    <div class="input-group">
-                        <input name="deltagareinput" placeholder="" class="form-control input-md" type="text">
-                    </div>
-                </div>
-                <div class="falt">
-                    <label>E-post:</label>
-                    <div class="input-group">
-                        <input name="deltagareinput" placeholder="" class="form-control input-md" type="text">
-                    </div>
-                </div>
                 <div class="row falt">
 
                     <div class="col-md-7 col-lg-6" style="padding-right:0px;">
@@ -167,11 +155,15 @@
                     </div>
                 </div>
 
-                <div class=" col-md-5 col-lg-6" style="margin-top:25px; padding-left:0px;">
+                <div class="col-md-5 col-lg-6" style="margin-top:25px; padding-left:0px;">
 
                     <button type="submit" class="btn btn-success">Lägg till anställd <span class="glyphicon glyphicon-floppy-saved"></span></button>
 
                 </div>
+               <div class="col-md-5 col-lg-6" style="margin-top:25px; padding-left:0px;">
+                   <button type="submit" class="btn btn-danger">Avbryt <span class="glyphicon glyphicon-floppy-remove"></span></button>
+               </div>
+
 
             </div>
         </div>
@@ -247,6 +239,10 @@
                                 </div>
                                 <div class="col-md-3 col-lg-3" style="padding-left:0px;">
                                     <button type="submit" class="btn btn-default">Ladda upp <span class="glyphicon glyphicon-file"></span></button>
+                                </div>
+                                <div class="col-md-2 col-lg-3">
+                                    <button type="submit" class="btn btn-danger">Avbryt <span class="glyphicon glyphicon-floppy-remove"></span></button>
+
                                 </div>
                             </div>
 
