--- a/design/design/Views/Home/omossAdmin.cshtml
+++ b/design/design/Views/Home/omossAdmin.cshtml
@@ -18,30 +18,7 @@
                         
                        <p> Byggmästaren John Ekström startade 1940 företaget John Ekströms byggnadsfirma. Nyckelordet i vår verksamhet är detsamma idag som det var för drygt 70 år sedan. Ordet är byggmästarkvalitét. En utgångspunkt som vi kommer hålla fast vid även i framtiden. Ekströms hus spänner över ett sekel av byggnader. Tack vare det kan vi erbjuda en rad olika typer av boendemiljöer. Vi har ca 900 hyreslägenheter i 60-talet innerstadsfastigheter. Vi här alltid noga med att sätta våra hyrsergäster i centrum. Därför strävar vi ständigt efter att skapa en trevlig och väl fungerande boendemiljö. Vi vill att våra hyresgäster ska känna trygghet, omtanke och trivsel.
                      </p>
-                        <div class="btnredigera btn-group-xs">
-                            <button class="btn" type="button" id="redigerabtn" onclick="showredigera()">
-                                Redigera 
-                                <span><i class="glyphicon glyphicon-pencil"></i></span>
-                            </button>
-                            <div class="redigera" id="redigera" style="display:none;">
-                                <div class="col-md-6">
-                                    <div class="falt">
-                                        <label>
-                                            Rubrik:
-                                        </label>
-                                        <div class="input-group">
-                                            <input name="state" placeholder="John EKströms Bygg" class="form-control" type="text">
-                                        </div>
-                                    </div>
-                                    <div class="falt">
-                                        <label>Text:
-                                        </label>
-                                        <img src="~/Content/Images/publish-wordpress-page.jpg" />
-                                        </div>
-                                    </div>
-                                </div>
-
-                            </div>
+                       
                         </div>
                     </div>
              
@@ -55,11 +32,7 @@
                         <h3 style="color: #e93523">Företagets nyckelord</h3>
                         <p>Byggmästarkvalitét</p>
                        
-                        <div class="btnredigera btn-group-xs">
-                            <button class="btn" type="button" id="redigerabtn">
-                                Redigera <span><i class="glyphicon glyphicon-pencil"></i></span>
-                            </button>
-                        </div>
+                       
                     </div>
                     <div class="col-md-2">
                         <br />
@@ -72,11 +45,6 @@
                                 Vi har lång erfarenhet av hyresfastigheter och hyresgäster.
                             </p>
                        
-                            <div class="btnredigera btn-group-xs">
-                                <button class="btn" type="button" id="redigerabtn">
-                                    Redigera <span><i class="glyphicon glyphicon-pencil"></i></span>
-                                </button>
-                            </div>
                         </div>
 
                     <div class="col-md-2">
@@ -86,11 +54,7 @@
                             <h3 style="color: #e93523">Våra partners</h3>
                             <p>Wärna Städ och GMS i Örebro AB</p>
                        
-                            <div class="btnredigera btn-group-xs">
-                                <button class="btn" type="button" id="redigerabtn">
-                                    Redigera <span><i class="glyphicon glyphicon-pencil"></i></span>
-                                </button>
-                            </div>
+                           
                         </div>
                     <div class="col-md-2">
                         <br />
@@ -100,11 +64,7 @@
                             <p>äger och förvaltar fastigheter i Örebro / Brickebacken. För intresseanmälan och mer information</p>
                             <a href="http://www.epfastigheter.se/" target="_blank">Läs mer på EP-fastigeheters egen hemsida</a>
                             <br />
-                            <div class="btnredigera btn-group-xs">
-                                <button class="btn" type="button" id="redigerabtn">
-                                    Redigera <span><i class="glyphicon glyphicon-pencil"></i></span>
-                                </button>
-                            </div>
+                           
                         </div>
                         
                    
@@ -129,10 +89,34 @@
                            <i> ”Denna fastighetsägare i Örebro hyser en särskild omtanke om samhällets mindre lyckligt lottade. Ett exempel på detta är den nyligen startade byggnationen av Sveriges modernaste kvinnohus som kommer erbjuda boende för våldsutsatta kvinnor och barn i behov av samhällets skydd. Att denna fastighetsägare även erbjuder övergångsbostäder ligger helt i linje med deras filosofi."</i>
                         </p>
                         <div class="btnredigera btn-group-xs">
-                            <button class="btn" type="button" id="redigerabtn">
-                                Redigera <span><i class="glyphicon glyphicon-pencil"></i></span>
+                            <button class="btn" type="button" id="redigerabtn" onclick="showredigera()">
+                                Redigera
+                                <span><i class="glyphicon glyphicon-pencil"></i></span>
                             </button>
+                            <div class="redigera" id="redigera" style="display:none;">
+                                <div class="col-md-12">
+                                   
+                                    <div class="falt">
+                                        <label>
+                                            Text:
+                                        </label>
+                                        <img src="~/Content/Images/publish-wordpress-page.jpg" class="img-responsive" alt="Cinque Terre">
+
+                                    </div>
+                                    <div class="col-md-5 col-lg-6" style="margin-top:25px; padding-left:0px;">
+
+                                        <button type="submit" class="btn btn-success">Spara<span class="glyphicon glyphicon-floppy-saved"></span></button>
+
+                                    </div>
+                                    <div class="col-md-5 col-lg-6" style="margin-top:25px; padding-left:0px;">
+                                        <button type="submit" class="btn btn-danger">Avbryt <span class="glyphicon glyphicon-floppy-remove"></span></button>
+                                    </div>
+                                </div>
+                            </div>
+
                         </div>
+
+
                     </div>
                     
 
